--- a/my-app/pom.xml
+++ b/my-app/pom.xml
@@ -27,6 +27,11 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+        <groupId>org.openjfx</groupId>
+        <artifactId>javafx-controls</artifactId>
+        <version>15.0.1</version>
+      </dependency>
   </dependencies>
 
   <build>
@@ -71,6 +76,14 @@
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
         </plugin>
+        <plugin>
+          <groupId>org.openjfx</groupId>
+          <artifactId>javafx-maven-plugin</artifactId>
+          <version>0.0.5</version>
+          <configuration>
+              <mainClass>MindMapSoftware</mainClass>
+          </configuration>
+      </plugin>
 <!--        <plugin>-->
 <!--          <groupId>org.codehaus.mojo</groupId>-->
 <!--          <artifactId>exec-maven-plugin</artifactId>-->
