--- a/my-app/pom.xml
+++ b/my-app/pom.xml
@@ -76,14 +76,22 @@
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
         </plugin>
-        <plugin>
+        <!-- <plugin>
           <groupId>org.openjfx</groupId>
           <artifactId>javafx-maven-plugin</artifactId>
           <version>0.0.5</version>
           <configuration>
               <mainClass>MindMapSoftware</mainClass>
           </configuration>
-      </plugin>
+      </plugin> -->
+      <plugin>
+        <groupId>com.zenjava</groupId>
+        <artifactId>javafx-maven-plugin</artifactId>
+        <version>8.8.3</version>
+        <configuration>
+            <mainClass>your.package.with.Launcher</mainClass>
+        </configuration>
+    </plugin>
 <!--        <plugin>-->
 <!--          <groupId>org.codehaus.mojo</groupId>-->
 <!--          <artifactId>exec-maven-plugin</artifactId>-->
